@@ -162,8 +162,6 @@ static char			*resolve_alloc;
 static char			*resolve_error_buff;
 static void			*call_buffer;
 static char			*call_filename_buff;
-static char			*call_entry_buff;
-static unsigned char		*call_entry2_buff;
 
 #ifndef	COB_BORKED_DLOPEN
 static lt_dlhandle		mainhandle;
@@ -593,9 +591,79 @@ lookup (const char *name)
 	return NULL;
 }
 
+/** encode given name
+  \param name to encode
+  \param name_buff to place the encoded name to
+  \param buff_size available
+  \param fold_case may be COB_FOLD_UPPER or COB_FOLD_LOWER
+  \return size of the encoded name, negative if the buffer size would be exceeded
+ */
+int
+cob_encode_program_id (const unsigned char *const name,
+	unsigned char *const name_buff,
+	const int buff_size, const int fold_case)
+{
+	const unsigned char *s = name;
+	int pos = 0;
+
+	/* Encode the initial digit */
+	if (unlikely (*name <= (unsigned char)'9' && *name >= (unsigned char)'0')) {
+		name_buff[pos++] = (unsigned char)'_';
+	}
+	/* Encode invalid letters */
+	for (; *s; ++s) {
+		if (pos >= buff_size - 3) {
+			name_buff[pos] = 0;
+			return -pos;
+		}
+		if (likely (valid_char[*s])) {
+			name_buff[pos++] = *s;
+		} else {
+			name_buff[pos++] = (unsigned char)'_';
+			if (*s == (unsigned char)'-') {
+				name_buff[pos++] = (unsigned char)'_';
+			} else {
+				name_buff[pos++] = hexval[*s / 16U];
+				name_buff[pos++] = hexval[*s % 16U];
+			}
+		}
+	}
+	name_buff[pos] = 0;
+
+	/* Check case folding */
+	switch (fold_case) {
+	case COB_FOLD_NONE:
+		break;
+	case COB_FOLD_UPPER:
+	{
+		unsigned char *p = name_buff;
+		for (p = name_buff; *p; p++) {
+			if (islower (*p)) {
+				*p = (cob_u8_t)toupper (*p);
+			}
+		}
+		break;
+	}
+	case COB_FOLD_LOWER:
+	{
+		unsigned char *p = name_buff;
+		for (p = name_buff; *p; p++) {
+			if (isupper (*p)) {
+				*p = (cob_u8_t)tolower (*p);
+			}
+		}
+		break;
+	}
+	default:
+		break;
+	}
+	
+	return pos;
+}
+
 static void *
 cob_resolve_internal (const char *name, const char *dirent,
-		      const int fold_case)
+	const int fold_case)
 {
 	unsigned char		*p;
 	const unsigned char	*s;
@@ -603,6 +671,8 @@ cob_resolve_internal (const char *name, const char *dirent,
 	struct struct_handle	*preptr;
 	lt_dlhandle		handle;
 	size_t			i;
+	char call_entry_buff[COB_MINI_BUFF];
+	char call_entry2_buff[COB_MINI_BUFF];
 
 	/* LCOV_EXCL_START */
 	if (unlikely(!cobglobptr)) {
@@ -617,46 +687,11 @@ cob_resolve_internal (const char *name, const char *dirent,
 		return func;
 	}
 
-	/* Encode program name */
-	p = (unsigned char *)call_entry_buff;
 	s = (const unsigned char *)name;
-	if (unlikely(*s <= (unsigned char)'9' && *s >= (unsigned char)'0')) {
-		*p++ = (unsigned char)'_';
-	}
-	for (; *s; ++s) {
-		if (likely(valid_char[*s])) {
-			*p++ = *s;
-		} else {
-			*p++ = (unsigned char)'_';
-			if (*s == (unsigned char)'-') {
-				*p++ = (unsigned char)'_';
-			} else {
-				*p++ = hexval[*s / 16U];
-				*p++ = hexval[*s % 16U];
-			}
-		}
-	}
-	*p = 0;
 
-	/* Check case folding */
-	switch (fold_case) {
-	case COB_FOLD_UPPER:
-		for (p = (unsigned char *)call_entry_buff; *p; p++) {
-			if (islower (*p)) {
-				*p = (cob_u8_t)toupper (*p);
-			}
-		}
-		break;
-	case COB_FOLD_LOWER:
-		for (p = (unsigned char *)call_entry_buff; *p; p++) {
-			if (isupper (*p)) {
-				*p = (cob_u8_t)tolower (*p);
-			}
-		}
-		break;
-	default:
-		break;
-	}
+	/* Encode program name, including case folding */
+	cob_encode_program_id (s, (unsigned char *)call_entry_buff,
+		COB_MINI_MAX, fold_case);
 
 #ifndef	COB_BORKED_DLOPEN
 	/* Search the main program */
@@ -709,10 +744,7 @@ cob_resolve_internal (const char *name, const char *dirent,
 
 	/* Check if name needs conversion */
 	if (unlikely(cobsetptr->name_convert != 0)) {
-		if (!call_entry2_buff) {
-			call_entry2_buff = cob_malloc ((size_t)COB_SMALL_BUFF);
-		}
-		p = call_entry2_buff;
+		p = (unsigned char *)call_entry2_buff;
 		for (; *s; ++s, ++p) {
 			if (cobsetptr->name_convert == 1 && isupper (*s)) {
 				*p = (cob_u8_t) tolower (*s);
@@ -969,7 +1001,7 @@ cob_call_field (const cob_field *f, const struct cob_call_struct *cs,
 	char				*buff;
 	char				*entry;
 	char				*dirent;
-	int				len;
+	size_t				len;
 
 	/* LCOV_EXCL_START */
 	if (unlikely(!cobglobptr)) {
@@ -985,7 +1017,7 @@ cob_call_field (const cob_field *f, const struct cob_call_struct *cs,
 		/* same warning as in cobc/typeck.c */
 		cob_runtime_warning (
 			_("'%s' literal includes leading spaces which are omitted"), buff);
-		len = strlen(buff);
+		len = strlen (buff);
 		while (*buff == ' ') {
 			memmove (buff, buff + 1, --len);
 		}
@@ -1294,14 +1326,6 @@ cob_exit_call (void)
 		cob_free (call_filename_buff);
 		call_filename_buff = NULL;
 	}
-	if (call_entry_buff) {
-		cob_free (call_entry_buff);
-		call_entry_buff = NULL;
-	}
-	if (call_entry2_buff) {
-		cob_free (call_entry2_buff);
-		call_entry2_buff = NULL;
-	}
 	if (call_buffer) {
 		cob_free (call_buffer);
 		call_buffer = NULL;
@@ -1408,7 +1432,6 @@ cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 	resolve_alloc = NULL;
 	resolve_error = NULL;
 	call_buffer = NULL;
-	call_entry2_buff = NULL;
 	call_lastsize = 0;
 	cob_jmp_primed = 0;
 
@@ -1429,7 +1452,6 @@ cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 #endif
 
 	call_filename_buff = cob_malloc ((size_t)COB_NORMAL_BUFF);
-	call_entry_buff = cob_malloc ((size_t)COB_SMALL_BUFF);
 
 	buff = cob_fast_malloc ((size_t)COB_MEDIUM_BUFF);
 	if (cobsetptr->cob_library_path == NULL
